--- a/public/index.html
+++ b/public/index.html
@@ -52,10 +52,10 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon-next.png?v=7.0.1">
 
 
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-32x32-next.png?v=7.0.1">
+  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon-c.png?v=7.0.1">
 
 
-  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-16x16-next.png?v=7.0.1">
+  <link rel="icon" type="image/png" sizes="16x16" href="/images/favicon-c.png?v=7.0.1">
 
 
   <link rel="mask-icon" href="/images/logo.svg?v=7.0.1" color="#222">
@@ -96,13 +96,16 @@
 
 
 
-  <meta property="og:type" content="website">
+  <meta name="description" content="Record My life">
+<meta property="og:type" content="website">
 <meta property="og:title" content="Cfreedomc">
 <meta property="og:url" content="http://yoursite.com/index.html">
 <meta property="og:site_name" content="Cfreedomc">
+<meta property="og:description" content="Record My life">
 <meta property="og:locale" content="zh-Hans">
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Cfreedomc">
+<meta name="twitter:description" content="Record My life">
 
 
 
@@ -352,7 +355,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -523,7 +526,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -694,7 +697,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -865,7 +868,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -1054,7 +1057,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -1225,7 +1228,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -1396,7 +1399,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -1567,7 +1570,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -1738,7 +1741,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -1909,7 +1912,7 @@
 
     <span hidden itemprop="author" itemscope="" itemtype="http://schema.org/Person">
       <meta itemprop="name" content="cfreedomc">
-      <meta itemprop="description" content="">
+      <meta itemprop="description" content="Record My life">
       <meta itemprop="image" content="/images/avatar.gif">
     </span>
 
@@ -2097,7 +2100,7 @@
           <div class="site-author motion-element" itemprop="author" itemscope="" itemtype="http://schema.org/Person">
             
               <p class="site-author-name" itemprop="name">cfreedomc</p>
-              <div class="site-description motion-element" itemprop="description"></div>
+              <div class="site-description motion-element" itemprop="description">Record My life</div>
           </div>
 
           
@@ -2350,7 +2353,7 @@
     notify: false,
     appId: 'sPPIkWmagaKbx976y9pFQ2fQ-gzGzoHsz',
     appKey: 'C9XKLtJFdpHFDha7UAC24CTD',
-    placeholder: 'Just go go',
+    placeholder: 'let me know your views',
     avatar: 'mm',
     meta: guest,
     pageSize: '10' || 10,
